# TaskST

./: README.md
MainWindowProcess/: CMakeLists.txt  CMakeLists.txt.user.8d6f3bb  main.cpp  main.qml  mywindow.cpp  mywindow.h  process.cpp  process.h  server.cpp  server.h  simpleswitch.cpp  simpleswitch.h
browserWindowProcess/: CMakeLists.txt  CMakeLists.txt.user.8d6f3bb  client.cpp  client.h  main.cpp  main.qml  main2.cpp  main2.qml  simpleswitch.rep
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MainWindowProcess.ilk  build.ninja  cmake_install.cmake
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/.cmake/api/v1/reply/: cache-v2-1fde7df5e75aa41dfa2f.json  cmakeFiles-v1-4b42ec3036fe6ea593ea.json  codemodel-v2-e8cc15446764663cd898.json  index-2020-09-17T09-45-37-0746.json  target-MainWindowProcess-Debug-33a2e4081b2728140a9c.json  target-MainWindowProcess_autogen-Debug-3217a2310a62dbb45c5d.json  target-MainWindowProcess_autogen_timestamp_deps-Debug-3da70af3762e38a95e89.json
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/MainWindowProcess_autogen/: deps  mocs_compilation.cpp
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/MainWindowProcess_autogen/EWIEGA46WW/: moc_process.cpp  moc_process.cpp.d  moc_server.cpp  moc_server.cpp.d  qrc_qml.cpp
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  moc_rep_simpleswitch_replica.cpp_parameters  moc_rep_simpleswitch_source.cpp_parameters
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Release/.cmake/api/v1/reply/: cache-v2-29a95dba5be2d992d4fa.json  cmakeFiles-v1-adb75d8b8109cbe5423e.json  codemodel-v2-85e84437b46f1af7e2de.json  (+4 more)
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Release/MainWindowProcess_autogen/: deps  mocs_compilation.cpp
build-MainWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Release/MainWindowProcess_autogen/EWIEGA46WW/: moc_process.cpp.d  moc_server.cpp  moc_server.cpp.d  moc_simpleswitch.cpp  moc_simpleswitch.cpp.d  qrc_qml.cpp
build-browserWindowProcess-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  browserWindowProcess  build.ninja  cmake_install.cmake
build-browserWindowProcess-Desktop-Debug/browserWindowProcess_autogen/: deps
build-browserWindowProcess-Desktop-Debug/browserWindowProcess_autogen/EWIEGA46WW/: qrc_qml.cpp
build-browserWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  browserWindowProcess.ilk  build.ninja  cmake_install.cmake  moc_rep_simpleswitch_replica.cpp  moc_rep_simpleswitch_replica.cpp_parameters  moc_rep_simpleswitch_source.cpp  moc_rep_simpleswitch_source.cpp_parameters  rep_simpleswitch_replica.h  rep_simpleswitch_source.h
build-browserWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/browserWindowProcess_autogen/: deps
build-browserWindowProcess-Desktop_Qt_5_15_1_MSVC2015_64bit-Debug/browserWindowProcess_autogen/EWIEGA46WW/: moc_client.cpp  moc_client.cpp.d  qrc_qml.cpp
(+22 files in other folders)
